--- a/demos/bootstrap-listpicker/index.html
+++ b/demos/bootstrap-listpicker/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-listpicker.min.css" />
+        <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/0xC70FF3/bootstrap-list-picker/master/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/0xC70FF3/bootstrap-list-picker/master/css/bootstrap-listpicker.min.css" />
 
-        <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/jquery.input-clear.js"></script>
-        <script type="text/javascript" src="js/bootstrap-listpicker.min.js"></script>
+        <script type="text/javascript" src="https://raw.githubusercontent.com/0xC70FF3/bootstrap-list-picker/master/js/jquery-1.8.2.min.js"></script>
+        <script type="text/javascript" src="https://raw.githubusercontent.com/0xC70FF3/bootstrap-list-picker/master/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="https://raw.githubusercontent.com/0xC70FF3/bootstrap-list-picker/master/js/jquery.input-clear.js"></script>
+        <script type="text/javascript" src="https://raw.githubusercontent.com/0xC70FF3/bootstrap-list-picker/master/js/bootstrap-listpicker.min.js"></script>
         <script type="text/javascript">
             $(document).ready(function() {
                 $("select[multiple='multiple']").listpicker();
