--- a/demos/analytics/index.html
+++ b/demos/analytics/index.html
@@ -2,9 +2,9 @@
 <body>
 <h1>Analytics</h1>
 <ul>
-<li><a href="0xC70FF3.github.io/demos/analytics#A">Link A</a></li>
-<li><a href="0xC70FF3.github.io/demos/analytics#B">Link B</a></li>
-<li><a href="0xC70FF3.github.io/demos/analytics#C">Link C</a></li>
+<li><a href="0xC70FF3.github.io/demos/analytics/index.html#A">Link A</a></li>
+<li><a href="0xC70FF3.github.io/demos/analytics/index.html#B">Link B</a></li>
+<li><a href="0xC70FF3.github.io/demos/analytics/index.html#C">Link C</a></li>
 </ul>
 </body>
 </html>
