--- a/demos/analytics/index.html
+++ b/demos/analytics/index.html
@@ -27,5 +27,10 @@
 <li><a href="#B">Link B</a></li>
 <li><a href="#C">Link C</a></li>
 </ul>
+
+<script type="text/javascript">
+  console.log(dataLayer);
+</script>
+
 </body>
 </html>
