--- a/demos/analytics/index.html
+++ b/demos/analytics/index.html
@@ -1,31 +1,11 @@
 <html><head></head>
 <body>
-<!-- Google Tag Manager -->
-<noscript>
-  <iframe src="//www.googletagmanager.com/ns.html?id=GTM-TLDJNW" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<script>
-(function(w,d,s,l,i){
-  w[l]=w[l]||[];
-  w[l].push({
-    'gtm.start':new Date().getTime(),
-    event:'gtm.js'
-  });
-  var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),
-      dl=l!='dataLayer'?'&l='+l:'';
-  j.async=true;
-  j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;
-  f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TLDJNW');
-</script>
-<!-- End Google Tag Manager -->
-  
+
 <h1>Analytics</h1>
 <ul>
-<li><a href="#A">Link A</a></li>
-<li><a href="#B">Link B</a></li>
-<li><a href="#C">Link C</a></li>
+<li><a href="confirm.html?value=A">Link A</a></li>
+<li><a href="confirm.html?value=B">Link B</a></li>
+<li><a href="confirm.html?value=C">Link C</a></li>
 </ul>
 
 <script type="text/javascript">
