--- a/demos/analytics/confirm.html
+++ b/demos/analytics/confirm.html
@@ -22,6 +22,6 @@
 <!-- End Google Tag Manager -->
 
 <h1>Confirmed!</h1>
-<a src="index.html">back</a>
+<a href="index.html">back</a>
 </body>
 </html>
